<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nexec X</string>

    <string name="action_about_this_app">About this app&#8230;</string>
    <string name="action_press_left_button">Press left</string>
    <string name="action_release_left_button">Release left</string>
    <string name="action_press_right_button">Press right</string>
    <string name="action_release_right_button">Release right</string>
    <string name="action_zoom_in">Zoom in</string>
    <string name="action_zoom_out">Zoom out</string>
    <string name="action_quit_session">Quit this session</string>
    <string name="action_host_preference">Host preference&#8230;</string>
    <string name="action_view_stderr">View stderr&#8230;</string>

    <string name="img_zoom_in">Zoom in</string>
    <string name="img_zoom_out">Zoom out</string>

    <string name="version_title">Version</string>
    <string name="url">
        http://neko-daisuki.ddo.jp/~SumiTomohiko/index.html
    </string>
    <string name="authors_website_title">Author\'s website</string>
    <string name="license_title">License</string>

    <string name="positive">Okay</string>
    <string name="negative">Cancel</string>
</resources>